--- a/Offer.html
+++ b/Offer.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/29ebc6cb08.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script src="button.js"></script>
 </head>
 
 <body>
@@ -175,6 +176,31 @@
         </div>
     </footer>
 </div>
+
+<!-- Booking Modal -->
+<div id="bookingModal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn" onclick="closeModal()">&times;</span>
+    <h2>Book Your Experience</h2>
+    <form>
+      <label for="name">Name:</label><br>
+      <input type="text" id="name" required><br><br>
+
+      <label for="email">Email:</label><br>
+      <input type="email" id="email" required><br><br>
+
+      <label for="date">Date:</label><br>
+      <input type="date" id="date" required><br><br>
+
+      <label for="time">Time:</label><br>
+      <input type="time" id="time" required><br><br>
+
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+</div>
+
+
 </body>
 
 </html>
